// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiHeaderSectionItem__button testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiHeaderSectionItemButton renders children 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span>
    Ahoy!
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification children 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiNotificationBadge euiHeaderSectionItemButton__notification"
  >
    1
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiNotificationBadge euiNotificationBadge--subdued euiHeaderSectionItemButton__notification"
  >
    1
  </span>
</button>
`;
